Install Rsync into systemd

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,2 @@
 ---
-resilio_sync_install: true
-resilio_sync_storage_dir: .sync/storage
-resilio_sync_configuration_dir: .config/resilio-sync
+rsync_install: true
